cluster/apps/shinobi/shinobi.service.yml
apiVersion: v1
kind: Service
metadata:
  name: shinobi
  namespace: shinobi
spec:
  selector:
    app: shinobi
  ports:
    - port: 8080
      targetPort: http
